# community-metrics

./: .env.example  .gitignore  AGENTS.md  LOCAL.md  PLAN.md  README.md  debug.py  pyproject.toml  reshape_stats_dump.py
seed_data/: download_stats.csv  lance-star-history-2026220.csv  lancedb-star-history-2026220.csv
skills/interpret-metrics/: SKILL.md  build_deck.py
skills/interpret-metrics/decks/: lancedb-community-metrics-q2-2026.html
src/community_metrics/: __init__.py  config.py  models.py
src/community_metrics/api/: main.py
src/community_metrics/jobs/: __init__.py  bootstrap_tables.py  collect_hn_evidence.py  common.py  daily_refresh.py  derive_dashboard.py  generate_signal_guidance.py  recompute_history.py  seed_from_csv.py  update_all.py  update_daily_downloads.py  update_daily_stars.py  update_duckdb_extension_downloads.py
src/community_metrics/sources/: __init__.py  crates_client.py  duckdb_extensions_client.py  github_client.py  hn_client.py  npm_client.py  openai_client.py  pypistats_client.py
src/community_metrics/storage/: __init__.py  lancedb_store.py
src/community_metrics/utils/: __init__.py  ids.py  time.py
src/dashboard/: next.config.ts  package-lock.json  package.json  tailwind.config.ts
src/dashboard/src/: App.tsx  (+3 more)
src/tests/: test_aggregation.py  test_api_contract.py  test_config_env.py  test_derive_dashboard.py  test_duckdb_extension_downloads.py  test_generate_signal_guidance.py  test_hn_evidence.py  test_jobs_bootstrap_tables.py  test_jobs_daily.py  test_lancedb_store_enterprise.py  test_models_metrics.py  test_time_parsing.py
(+22 files in other folders)
