[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "community-metrics"
version = "0.1.0"
description = "LanceDB community metrics dashboard backend and ingestion jobs"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "lancedb>=0.25.0",
  "pyarrow>=20.0.0",
  "requests>=2.32.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "httpx>=0.28.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["community_metrics*"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["src/tests"]
